Set API URLs to production backend

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Bimba Vinimaya - Browse verified real estate listings, connect with trusted sellers, and find your dream home with confidence."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -26,7 +26,7 @@
     -->
     <!-- Razorpay Script -->
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-    <title>React App</title>
+    <title>Bimba Vinimaya - Find Your Dream Home</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
